--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
    
     <link rel="stylesheet" href="../image/netflix-logo-app-png-16 - Copy.png " type="image/png">
-    <title>Hello Pakistan</title>
+    <title>Netflix Pakistan</title>
     
 </head>
 <body>
